# Tanker24

./: .env.example  .env.test.example  .gitignore  .readthedocs.yaml  LICENSE  README.md  compose.demo.yaml  compose.integration.yaml  compose.yaml  mkdocs.yml  sonar-project.properties
.diagramms/: er-diagram.drawio
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_backend.yml  build_frontend.yml  deploy.yml  sonarcloud.yml  test_backend.yml  test_frontend.yml  test_integration.yml
backend/: .gitignore  Containerfile  Dockerfile  app.py  database.py  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  database.py  dependencies.py  invitation_keys.py  limiter.py  logging_config.py  main.py  models.py
backend/app/dtos/: filling_dto.py  gas_station_dtos.py
backend/app/exceptions/: exceptions.py
backend/app/repositories/: car_repository.py  fuel_type_repository.py  history_record_repository.py  invitation_key_repository.py  station_repository.py  tankerkoenig_station_repository.py
backend/app/routers/: auth.py  export.py  fillings.py  health.py  stations.py  websocket.py
backend/app/schemas/: __init__.py  car.py  fuel_type.py  history_record.py  station.py  user.py
backend/app/services/: export_data_service.py  fillings_service.py  gas_station_service.py  nearby_stations_service.py  rate_limiter.py  station_cache_service.py  station_service.py
backend/models/: example_model.py
backend/router/: example.py
backend/tests/: conftest.py  test_architecture.py  test_auth.py  test_car_repository.py  test_config.py  test_dependencies.py  test_exceptions.py  test_export.py  test_export_data_service.py  test_filling_dto.py  test_fillings.py  test_fillings_service.py  test_fuel_type_repository.py  test_gas_station_service.py  test_health.py  test_history_record_repository.py  test_invitation_keys.py  test_invitation_keys_integration.py  test_logging_config.py  test_main.py  test_nearby_stations_service.py  test_pentest.py  test_performance.py  test_rate_limiting.py  test_station_repository.py  test_stations.py
db/seed/: demo-data.sql
docs/: adr.md  arc42.md  class-model.md  er-model.md  index.md  installation.md  requirements.txt  testConcept.md  usage.md
docs/arc42/: 01_into_goals.md  01_intro_goals.md  02_constraints.md  03_context_scope.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  10_quality.md  11_risks_technical_debt.md  12_glossary.md
docs/assets/diagrams/: container_diagram.puml  er-diagram.drawio  structurizr.dsl  system_context.puml
docs/assets/diagrams/structurizr/: workspace.dsl  workspace.json
docs/decisions/: ADR_001_FastAPI.md  ADR_002_fastapi-users.md  ADR_003_Svelte.md  ADR_004_Postgresql.md  ADR_005_SonarQube.md  ADR_006_OpenStreetMap.md  ADR_007_OSM_Standard_Tiles.md  ADR_008_TailwindCSS.md  ADR_fastapi-users.md  index.md
frontend/: Dockerfile
frontend/app/: .dependency-cruiser.cjs  .gitignore  Dockerfile  README.md  package-lock.json  package.json  playwright.config.ts  playwright.integration.config.ts  svelte.config.js  vite.config.ts  webpack.config.cjs
frontend/app/src/: app.css  app.html
frontend/app/src/lib/: utils.test.ts  utils.ts
frontend/app/src/lib/components/: AccessibilitySection.svelte  AuthRequiredModal.svelte  ConfirmModal.svelte  ConsentModal.svelte  FillingModal.svelte  Footer.svelte  IshiharaPlate.svelte  LanguageSwitcher.svelte  Logo.svelte  Navbar.svelte  StationFeed.svelte  button.svelte  button.svelte.test.ts
frontend/app/src/lib/i18n/: index.test.ts  index.ts
frontend/app/src/lib/services/: api.test.ts  api.ts  auth_api.test.ts  auth_api.ts  export_api.test.ts  export_api.ts  fillings_api.test.ts  fillings_api.ts  stations.test.ts  (+4 more)
frontend/app/src/routes/: +layout.svelte  +page.svelte  page.svelte.e2e.ts  test-utils.e2e.ts
(+31 files in other folders)
