[project]
name = "tanker24-backend"
version = "0.1.0"
description = "Tanker24 Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "fastapi-users>=15.0.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.22.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
