[project]
name = "tanker24-backend"
version = "0.1.0"
description = "Tanker24 Backend API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.42.0",
    "fastapi-users>=15.0.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.22.0",
    "bcrypt>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.31.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytestarch>=4.0.1",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.0",
    "ruff>=0.15.0",
    "mypy>=1.19.0",
    "respx>=0.22.0",
    "pytest-cov>=7.0.0"
]
[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120 # Increased from 80, requested by Lukas
indent-width = 4

# Assume Python 3.14
target-version = "py314"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E501"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

indent-style = "tab"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

line-ending = "lf"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.14"
strict = true
ignore_missing_imports = true
disable_error_code = [
    "type-var",
    "no-untyped-def",
    "no-untyped-call"
]

[tool.ty.rules]
unused-ignore-comment = "warn"
redundant-cast = "ignore"
possibly-missing-attribute = "error"
possibly-missing-import = "error"

[tool.coverage.run]
# https://github.com/coveragepy/coveragepy/issues/1082
# https://github.com/coveragepy/coveragepy/issues/1012
concurrency = ["greenlet"]

